Stop the scrollbar from showing up unnecessarily (Original #923) (#262)
* add contributor

* rearrange order

* Stop the scrollbar from showing up unnecessarily (#923)

--- a/themes/vue/source/css/_common.styl
+++ b/themes/vue/source/css/_common.styl
@@ -163,7 +163,7 @@ a.button
         display none
         box-sizing border-box
         max-height "calc(100vh - %s)" % $header-height
-        overflow-y scroll
+        overflow-y auto
         position absolute
         top 100%
         width 124px
